2010-02-17  Uros Bizjak  <ubizjak@gmail.com>

	PR target/43103
	* config/i386/sse.md (xop_vpermil2<mode>3): Use avxmodesuffixf2c
	for insn mnemonic suffix.

2010-02-17  Richard Guenther  <rguenther@suse.de>

	* tree-vrp.c (vrp_visit_phi_node): Restrict SCEV analysis
	to loop PHI nodes.

2010-02-17  Jakub Jelinek  <jakub@redhat.com>

	PR debug/42918
	* caller-save.c (save_call_clobbered_regs): If BB ends with
	a DEBUG_INSN, move any notes in between last real insn and the last
	DEBUG_INSN after the last DEBUG_INSN.

2010-02-16  Joern Rennecke  <joern.rennecke@embecosm.com>

	* tm.texi (TARGET_SCHED_FIRST_CYCLE_MULTIPASS_DFA_LOOKAHEAD_GUARD_SPEC):
	Fix return type.  Fix argument type.  Explain meaning of return value.

2010-02-16  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/41043
	* tree-vrp.c  (vrp_var_may_overflow): Only ask SCEV for real loops.
	(vrp_visit_assignment_or_call): Do not ask SCEV for regular
	statements ...
	(vrp_visit_phi_node): ... but only for loop PHI nodes.

2010-02-16  Ira Rosen <irar@il.ibm.com>

	PR tree-optimization/43074
	* tree-vectorizer.h (VECTORIZABLE_CYCLE_DEF): New.
	* tree-vect-loop.c (vect_analyze_loop_operations): Add
	vectorizable cycles in hybrid SLP check.
	* tree-vect-slp.c (vect_detect_hybrid_slp_stmts): Likewise.

2010-02-16  Richard Guenther  <rguenther@suse.de>

	* alias.c (memrefs_conflict_p): Distinguish must-alias from don't know.
	(true_dependence): If memrefs_conflict_p computes must-alias
	trust it.  Move TBAA check after offset-based disambiguation.
	(canon_true_dependence): Likewise.

2010-02-16  Alexandre Oliva  <aoliva@redhat.com>

	* params.def (PARAM_MAX_VARTRACK_SIZE): New.
	* doc/invoke.texi: Document it.
	* var-tracking.c: Include toplev.h and params.h.
	(vt_find_locations): Return bool indicating success.  Compute
	hash sizes unconditionally.  Check new parameter, report.
	(variable_tracking_main_1): Check vt_find_locations results and
	retry.  Renamed from...